<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="5dp"
        android:background="#009af7"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_xm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/fragment_office_nologin"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tv_xh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/fragment_office_zhengfangxitong"
            android:textColor="#50000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_officelogin"
            android:layout_margin="2dp"
            android:paddingRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_office"
            android:layout_alignParentRight="true"
            android:text="@string/fragment_lib_login"
            android:textColor="#0000ff"
            android:textSize="14sp" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/list_line" />

    <TextView
        android:id="@+id/tv_classForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_office_classform"
        android:textColor="#50000000"
        android:textSize="20sp" />

    <TextView
        
        android:id="@+id/tv_personalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_office_personal_info"
        android:textColor="#50000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_office_querry_score"
        android:textColor="#50000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_eletive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_office_elective"
        android:textColor="#50000000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_lib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/fragment_lib_library"
            android:textColor="#50000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_liblogin"
            android:layout_margin="2dp"
            android:paddingRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_lib"
            android:layout_alignParentRight="true"
            android:text="@string/fragment_lib_login"
            android:textColor="#0000ff"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/list_line" />

    <TextView
        android:id="@+id/tv_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_fast_serach"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_lib_userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_lib_userinfo"
        android:textColor="#50000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_borrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_borrow_state"
        android:textColor="#50000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_borrowhistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_borrow_history"
        android:textColor="#50000000"
        android:textSize="20sp" />

</LinearLayout>